# Aether

./: .dockerignore  .env.example  .gitignore  AutoDiscoveryModule.ts  CHANGELOG.md  CONTRIBUTING.md  ConsentModule.ts  CoreEventQueue.ts  CoreIdentityManager.ts  DEPLOYMENT_ASSESSMENT.md  EXTRACTION_DEFENSE_AUDIT.md  EdgeMLModule.ts  ExperimentModule.ts  MainAetherSDKClass.ts  Makefile  PROVIDER_MATRIX.md  README.md  RELEASE_HARDENING_AUDIT.md  REPO_ALIGNMENT_AUDIT.md  REPO_AUDIT.md  RootPackageSDK.json  Web3Module.ts  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
AWS Deployment/aether-aws/: README.md  main.py  pyproject.toml
AWS Deployment/aether-aws/config/: __init__.py  aws_config.py
AWS Deployment/aether-aws/scripts/: __init__.py
AWS Deployment/aether-aws/scripts/capacity/: __init__.py  capacity_ops.py
AWS Deployment/aether-aws/scripts/cost/: __init__.py  cost_ops.py
AWS Deployment/aether-aws/scripts/dr/: __init__.py  disaster_recovery.py
AWS Deployment/aether-aws/scripts/monitoring/: __init__.py  monitoring_ops.py
AWS Deployment/aether-aws/scripts/network/: __init__.py  network_ops.py
AWS Deployment/aether-aws/scripts/security/: __init__.py  security_ops.py
AWS Deployment/aether-aws/shared/: __init__.py  aws_client.py  notifier.py  runner.py
Agent Layer/: README.md  controller.py  core.py  entity_resolver.py  guardrails.py  main.py  pyproject.toml  web_crawler.py
Agent Layer/agent_controller/: cli.py  controller.py  dashboard.py  governance.py  hub.py  kira.py
Agent Layer/agent_controller/controllers/: __init__.py  bolt.py  commit.py  discovery.py  enrichment.py  intake.py  recovery.py  trigger.py  verification.py
Agent Layer/agent_controller/planning/: __init__.py  objective_planner.py  replanner.py  routing_policy.py  stopping_policy.py
Agent Layer/agent_controller/runtime/: __init__.py  briefing.py  checkpointing.py  loop_runtime.py  objective_runtime.py  review_batching.py  unit_identity.py
Agent Layer/config/: settings.py
Agent Layer/feedback/: learning.py
Agent Layer/guardrails/: guardrails.py  pii_model.py  policy.py
Agent Layer/models/: __init__.py  core.py  evidence.py  mutations.py  objectives.py  units.py
Agent Layer/queue/: celery_app.py  routing.py  tasks.py
Agent Layer/services/: __init__.py
Agent Layer/services/agent/: __init__.py  internal_ops.py  review_queue.py
Agent Layer/shared/: __init__.py
Agent Layer/shared/events/: __init__.py  objective_events.py
Agent Layer/shared/graph/: __init__.py  commits.py  conflicts.py  staging.py
Agent Layer/workers/: base.py  chain_monitor_v2.py  registry.py
Agent Layer/workers/discovery/: __init__.py  api_scanner.py  chain_monitor.py  competitor_tracker.py  social_listener.py  web_crawler.py
Agent Layer/workers/enrichment/: __init__.py  entity_resolver.py  profile_enricher.py  quality_scorer.py  semantic_tagger.py  temporal_filler.py
Agent Layer/workers/teams/commit/: __init__.py
Agent Layer/workers/teams/discovery/: __init__.py
Agent Layer/workers/teams/enrichment/: __init__.py
Agent Layer/workers/teams/recovery/: __init__.py
Agent Layer/workers/teams/verification/: __init__.py
Backend Architecture/aether-backend/: Dockerfile  main.py  pyproject.toml
Backend Architecture/aether-backend/config/: settings.py
Backend Architecture/aether-backend/dependencies/: providers.py
Backend Architecture/aether-backend/middleware/: middleware.py
Backend Architecture/aether-backend/repositories/: lake.py  repos.py
Backend Architecture/aether-backend/services/admin/: routes.py
Backend Architecture/aether-backend/services/agent/: routes.py
Backend Architecture/aether-backend/services/analytics/: routes.py
Backend Architecture/aether-backend/services/analytics_automation/: __init__.py  pipeline.py  routes.py
Backend Architecture/aether-backend/services/attribution/: __init__.py  models.py  resolver.py  routes.py
Backend Architecture/aether-backend/services/behavioral/: __init__.py  engines.py  routes.py  signals.py
Backend Architecture/aether-backend/services/campaign/: routes.py
Backend Architecture/aether-backend/services/commerce/: __init__.py  models.py  routes.py  service.py
Backend Architecture/aether-backend/services/consent/: routes.py
Backend Architecture/aether-backend/services/crossdomain/: __init__.py  models.py  registries.py  routes.py
Backend Architecture/aether-backend/services/expectations/: __init__.py  baseline_builder.py  engine.py  extraction_expectations.py  models.py  routes.py  signal_builder.py
Backend Architecture/aether-backend/services/fraud/: __init__.py  engine.py  routes.py  signals.py
Backend Architecture/aether-backend/services/gateway/: routes.py
Backend Architecture/aether-backend/services/identity/: routes.py
Backend Architecture/aether-backend/services/ingestion/: routes.py
Backend Architecture/aether-backend/services/intelligence/: __init__.py  extraction_attribution.py  extraction_intel.py  routes.py
Backend Architecture/aether-backend/services/lake/: drift_monitor.py  features.py  graph_mutations.py  model_registry.py  routes.py
Backend Architecture/aether-backend/services/ml_serving/: routes.py
Backend Architecture/aether-backend/services/notification/: routes.py
Backend Architecture/aether-backend/shared/: __init__.py  decorators.py  observability.py  store.py
GDPR & SOC2/aether-compliance/: README.md  main.py  pyproject.toml
GDPR & SOC2/aether-compliance/config/: __init__.py  compliance_config.py
GDPR & SOC2/aether-compliance/policies/: policy_generator.py
GDPR & SOC2/aether-compliance/shared/: __init__.py  logger.py
GDPR & SOC2/aether-compliance/tests/: compliance_tests.py  test_compliance_pytest.py
cicd/aether-cicd/: README.md  main.py  pyproject.toml
cicd/aether-cicd/config/: __init__.py  pipeline_config.py
cicd/aether-cicd/quality_gates/: __init__.py  gate.py
cicd/aether-cicd/scripts/: seed_demo_data.py
cicd/aether-cicd/shared/: __init__.py  change_detect.py  notifier.py  parsers.py  runner.py
cicd/aether-cicd/terraform/: main.tf
(+701 files in other folders)
