[project]
name = "aether-agent-layer"
version = "0.1.0"
description = "Aether Agent Layer — Autonomous discovery and enrichment workers"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
# Production queue backend
celery = ["celery[redis]>=5.3"]
# NER-based PII detection
ner = ["spacy>=3.7"]
# Full production stack
all = [
    "celery[redis]>=5.3",
    "spacy>=3.7",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
# Development / testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
