[project]
name = "aether-aws"
version = "1.0.0"
description = "Aether AWS Deployment — Infrastructure, Operations, and DR"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "moto[all]>=5.0", "pytest-cov>=5.0"]

[project.scripts]
aether-aws = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
