[project]
name = "aether-backend"
version = "0.1.0"
description = "Aether Backend — Unified API serving 10 microservices"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
# Production data stores
databases = [
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "aioboto3>=12.0",
    "opensearch-py>=2.5",
    "gremlinpython>=3.7",
]
# Kafka event bus
kafka = ["aiokafka>=0.10"]
# Full production stack
all = [
    "aether-backend[databases]",
    "aether-backend[kafka]",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
