[project]
name = "aether-cicd"
version = "1.0.0"
description = "Aether CI/CD Pipeline — Modular deployment automation for monorepo services and SDKs"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
notifications = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]
all = [
    "aether-cicd[notifications,dev]",
]

[project.scripts]
aether-pipeline = "main:main"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
